Tweak some whitespace
Also had to roll-back to wkhtmltopdf 0.12.3

--- a/index.html
+++ b/index.html
@@ -11,14 +11,34 @@
 <body>
 <h1 id="milo-polte">Milo Polte</h1>
 <hr />
-<p><code>762 Shotwell St                                                             milo.polte@gmail.com</code><br />
-<code>San Francisco, CA 94110                                    github.com/sqrl (mostly professional)</code><br />
-<code>Phone: 607-280-3615                                        github.com/hyena (mostly hobbies)</code><br />
-<code>www.linkedin.com/in/milopolte</code></p>
+<table>
+<colgroup>
+<col width="51%" />
+<col width="48%" />
+</colgroup>
+<tbody>
+<tr class="odd">
+<td><code>762 Shotwell St</code></td>
+<td align="right"><code>milo.polte@gmail.com</code></td>
+</tr>
+<tr class="even">
+<td><code>San Francisco, CA 94110</code></td>
+<td align="right"><code>github.com/sqrl (mostly professional)</code></td>
+</tr>
+<tr class="odd">
+<td><code>Phone: 607-280-3615</code></td>
+<td align="right"><code>github.com/hyena (mostly hobbies)</code></td>
+</tr>
+<tr class="even">
+<td><code>www.linkedin.com/in/milopolte</code></td>
+<td align="right"><code>This resume's source code:</code> <a href="https://github.com/sqrl/resume" class="uri">https://github.com/sqrl/resume</a></td>
+</tr>
+</tbody>
+</table>
 <hr />
 <h2 id="work-experience">Work Experience</h2>
 <dl>
-<dt>Jan 2017 - April 2020</dt>
+<dt>Jan 2017 - April 2020</dt>
 <dd><p><em>Senior Software Engineer at <a href="https://tracegenomics.com/">TraceGenomics Inc.</a></em> (Burlingame, Californa)</p>
 <ul>
 <li>Designed and implemented the backend pipeline and software stack for analyzing genomic information using parallel computing, reducing compute time from days to minutes.</li>
@@ -27,7 +47,7 @@
 <li>Acted as the security engineer on the team; deployed security practices and firewall infrastructure, investigated hacking and phishing attempts, managed company accounts.</li>
 </ul>
 </dd>
-<dt>May 2015 - Dec 2016</dt>
+<dt>May 2015 - Dec 2016</dt>
 <dd><p><em>Software Engineer at <a href="https://www.dropbox.com">Dropbox</a> in the Data Infrastructure Team</em> (San Francisco).</p>
 <ul>
 <li>Tech lead on new data-infra APIs, replacing single point of failure web-forms with programmatic interfaces providing the backends for a new suite of analytic tools.
@@ -38,7 +58,7 @@
 <li>Member of an on-call rotation maintaining an infrastructure that runs thousands of jobs crunching petabytes of log data.</li>
 </ul>
 </dd>
-<dt>Jan 2012 - Feb 2015</dt>
+<dt>Jan 2012 - Feb 2015</dt>
 <dd><p><em>Software Engineer and Manager/Tech Lead for <a href="https://www.wibidata.com">WibiData, Inc</a></em> (San Francisco).</p>
 <ul>
 <li>Fourth employee at a Big Data startup that grew to over forty.</li>
@@ -60,7 +80,7 @@
 </ul></li>
 </ul>
 </dd>
-<dt>Summer 2011 (3 months)</dt>
+<dt>Summer 2011</dt>
 <dd><p><em>Software Engineer internship at <a href="http://www.panasas.com/">Panasas</a></em> (Pittsburgh, PA).</p>
 <ul>
 <li>Project work towards instrumenting a FreeBSD kernel driver to implement QoS I/O scheduling in network attached storage devices for our parallel, distributed filesystem.</li>
